Enhance AI configuration in .env.example and refactor AI integration in services. Added support for flexible AI API configurations and updated MeetingSummaryService to utilize new AIConfig class for improved API key management and settings.

--- a/.env.example
+++ b/.env.example
@@ -15,8 +15,18 @@ AZURE_CLIENT_ID=your_client_id
 AZURE_CLIENT_SECRET=your_client_secret
 AZURE_TENANT_ID=your_tenant_id
 
-# OpenAI Configuration
+# OpenAI Configuration (Legacy - for backward compatibility)
 OPENAI_API_KEY=your_openai_api_key
+
+# AI Configuration (Flexible - supports any OpenAI-compatible API)
+# For OpenAI: Use AI_API_KEY + default AI_BASE_URL
+# For Meta Llama: Set AI_BASE_URL=https://api.llama-api.com/v1 + AI_MODEL=llama-3.1-405b-instruct
+# For other providers: Set your custom AI_BASE_URL and AI_MODEL
+AI_API_KEY=your_ai_api_key
+AI_BASE_URL=https://api.openai.com/v1
+AI_MODEL=gpt-3.5-turbo
+AI_MAX_TOKENS=1000
+AI_TEMPERATURE=0.3
 
 # RabbitMQ Configuration
 RABBITMQ_URL=amqp://localhost:5672
